# scrapy-web_scraper_tool

./: .gitignore  LICENSE  README.md  dockercompose.yml  pyproject.toml
books/books/: items.py  middlewares.py  pipelines.py  settings.py
books/books/spiders/: book.py
