[tool.poetry]
name = "scrapy-mongo"
version = "0.1.0"
description = "Web Scraping With Scrapy and MongoDB"
authors = ["trailtony"]
license = "MIT"
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.9.1"

[tool.poetry.group.dev.dependencies]
Scrapy = "^2.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
